src/test/ui/span/issue28498-reject-ex1.stderr
error[E0597]: `foo.data` does not live long enough
  --> $DIR/issue28498-reject-ex1.rs:34:29
   |
LL |     foo.data[0].1.set(Some(&foo.data[1]));
   |                             ^^^^^^^^ borrowed value does not live long enough
...
LL | }
   | - `foo.data` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error[E0597]: `foo.data` does not live long enough
  --> $DIR/issue28498-reject-ex1.rs:36:29
   |
LL |     foo.data[1].1.set(Some(&foo.data[0]));
   |                             ^^^^^^^^ borrowed value does not live long enough
LL |     //~^ ERROR `foo.data` does not live long enough
LL | }
   | - `foo.data` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0597`.
